Fixed some spacing in apic of day

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,7 @@
     font-family: 'Varela Round', Helvetica, sans-serif;
   }
   img {
-    border-radius: 0.25rem;
+    border-radius: 0.375rem;
   }
   .nis-font {
     font-family: Audiowide, sans-serif;
